[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Ship-sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/navinha.gd" type="Script" id=2]
[ext_resource path="res://samples/InvaderHit.wav" type="AudioStream" id=3]
[ext_resource path="res://samples/ShipBullet.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "explosion"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2, 1, 2, 1, 2, 1, 2 ]
}

[node name="navinha" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="poly" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 4, 8, 4, 6, -1, 3, -1, 0, -4, -3, -1, -6, -1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 1 )

[node name="sons_navinha" type="Node" parent="."]

[node name="navinha_tiro" type="AudioStreamPlayer" parent="sons_navinha"]
stream = ExtResource( 4 )

[node name="navinha_destruida" type="AudioStreamPlayer" parent="sons_navinha"]
stream = ExtResource( 3 )
